<resources>
    <string name="app_name">TaskApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">SAVE</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="profile">profile</string>
    <string name="name">Name</string>
    <string name="sort">Sort</string>
    <string name="todo">TODO</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="email">Email</string>
    <string name="log_out">Log Out</string>
</resources>