<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6DB00"
    tools:context=".ui.profile.ProfileFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:id="@+id/black_view"
        app:layout_constraintTop_toTopOf="parent"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:id="@+id/white_view"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circle_image_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="76dp"
        android:scaleType="centerCrop"
        android:src="@drawable/baseline_add_a_photo_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_name_profile"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="40dp"
        android:hint="@string/name"
        android:paddingHorizontal="25dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/white_view" />
    <EditText
        android:id="@+id/et_desc_profile"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="40dp"
        android:hint="@string/description"
        android:paddingHorizontal="25dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name_profile" />
    <EditText
        android:id="@+id/et_email_profile"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="40dp"
        android:hint="@string/email"
        android:paddingHorizontal="25dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_desc_profile" />

    <EditText
        android:id="@+id/et_date_profile"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="40dp"
        android:layout_marginTop="28dp"
        android:hint="@string/date_of_birth"
        android:paddingHorizontal="25dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email_profile" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:text="@string/log_out"
        android:textSize="30sp"
        app:cornerRadius="30dp"
        android:backgroundTint="#0A6E14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="-350dp"
        android:layout_marginVertical="200dp"
        android:layout_marginStart="256dp"
        android:layout_marginTop="220dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>